# Orca

./: .gitattributes  .gitignore  CLAUDE.md  README.md  pyproject.toml  spike.sh
.github/workflows/: integration.yml  test.yml
docs/: DESIGN.md  PLAN.md  REFERENCES.md  TASK.md  in-session-usage.md  sidechain-web-troubleshooting.md
docs/plans/: 2026-06-29-phase1-schema.md  2026-06-30-phase2-compile.md  2026-06-30-phase3-events-profiles.md  2026-06-30-phase4-exec.md  2026-06-30-phase5-migration.md  2026-06-30-phase5-run.md  2026-06-30-phase6-gates.md  2026-06-30-phase7-cli.md  2026-06-30-phase9-web-plan.md  2026-06-30-phase9a-web-backend.md  2026-06-30-phase9b-web-frontend-core.md  2026-06-30-phase9c-web-dag-replay.md  2026-06-30-phase9d-web-gate-chart.md  2026-07-01-phase10-mcp.md  2026-07-01-phase11-cli-enrichment.md  2026-07-02-terminate-step.md  2026-07-03-phase12-tui-redesign.md  2026-07-03-phase13-render-chart.md  2026-07-07-executor-cli-extend.md  2026-07-07-in-session-shell-v8.md  2026-07-07-setup-outputs-injection.md  2026-07-08-in-session-compact-prompt.md  2026-07-08-in-session-entry-redesign-and-deploy.md  2026-07-08-unified-install.md  2026-07-09-in-session-outputs-inputs-prompt-polish.md  2026-07-15-in-session-batch-fu2-3a-fu3.md  2026-07-15-in-session-fu1-stop-open-runid.md  2026-07-15-in-session-fu3-status-noarg-active.md  2026-07-15-in-session-step3a-inputs-skill-polish.md  2026-07-15-in-session-step3b-catalog-relocate.md  2026-07-15-in-session-step5a-setup-removal.md  2026-07-15-in-session-step5b-daemon-error-envelope.md  2026-07-15-in-session-step6-nga-cac-install.md  2026-07-15-tars-skill-rebrand.md  2026-07-16-in-session-chart.md  2026-07-16-teams-to-tars-rename.md  2026-07-16-wireless-ascend-latency.md  2026-07-17-subagent-output-b1.md  2026-07-18-web-visual-refinement.md  2026-07-19-quant-ptq-sweep-w2.md  (+10 more)
docs/releases/: 2026-06-29-phase1-schema.md  2026-06-30-phase2-compile.md  2026-06-30-phase3-events-profiles.md  2026-06-30-phase4-exec.md  2026-06-30-phase5-migration.md  2026-06-30-phase5-run.md  2026-06-30-phase6-gates.md  2026-06-30-phase7-cli.md  2026-06-30-phase9a-web-backend.md  2026-06-30-phase9b-web-frontend-core.md  2026-06-30-phase9c-web-dag-replay.md  2026-06-30-phase9d-web-gate-chart.md  2026-07-01-e2e-mxint-bugfix.md  2026-07-01-phase10-mcp.md  2026-07-01-phase11-ci.md  2026-07-01-phase11-interrupt-ui.md  2026-07-01-phase9-browser-e2e-fix.md  2026-07-01-tape-lazy-open.md  2026-07-02-agent-observability-tui-fixes.md  2026-07-02-executor-config.md  2026-07-02-phase11-ask-user-mcp.md  2026-07-02-phase11-checkpoint-resume.md  2026-07-02-phase11-complete.md  2026-07-02-phase11-daemon.md  2026-07-02-phase11-dialog.md  2026-07-02-phase11-guidance-injection.md  2026-07-02-phase11-interrupt-resolved-fix.md  2026-07-02-phase11-retry-policy.md  2026-07-02-phase11-skip-to-agent.md  2026-07-02-phase11-validator.md  2026-07-02-phase11-wait-interrupt-fix.md  2026-07-02-phase11-wait-node.md  2026-07-02-terminate-step.md  2026-07-03-opencode-backend.md  2026-07-03-phase12-tui-redesign.md  2026-07-03-phase13-render-chart.md  2026-07-03-phase14-agent-first-class.md  2026-07-04-mxint-real-bitx.md  2026-07-04-render-layer-v1-e2e-gaps.md  2026-07-04-render-layer-v1.md  (+82 more)
docs/specs/: 2026-07-07-in-session-iron-law-1-adr.md  2026-07-17-host-session-binding-design-draft.md  2026-07-17-subagent-output-to-web-design-draft.md  2026-07-18-web-presentation-refinement.md  2026-07-18-web-visual-refinement-amendment.md  2026-07-19-in-session-hardening-and-perf.md  2026-07-23-in-session-chart-robustness.md  2026-07-23-in-session-error-management.md  2026-07-23-single-port-multi-run-monitoring.md  agent-ask-user-sentinel.md  agent-history-single-stream-design-draft.md  agent-interrupt-design-draft.md  agent-structural-exploration-design-draft.md  in-session-entry-and-simplification.md  in-session-shell-design-draft.md  in-session-unified-backend-draft.md  node-memory-design-draft.md  phase-1-schema.md  phase-10-mcp.md  phase-11-cli-enrichment.md  phase-12-cli-tui-redesign.md  phase-13-render-chart.md  phase-14-agent-first-class.md  phase-16-agent-history-single-stream.md  phase-2-compile.md  phase-3-events.md  phase-4-exec.md  phase-5-run.md  phase-6-gates.md  phase-7-cli.md  phase-9-web.md  phase-9a-web-backend.md  phase-9b-web-frontend-core.md  phase-9c-web-dag-replay.md  phase-9d-web-gate-chart.md  push-chain-diagnostic-design-draft.md  push-chain-diagnostic.md  render-layer-design-draft.md  shells-design-draft.md  tui-redesign-draft.md  (+4 more)
docs/status/: CHANGELOG.md  CURRENT.md
examples/: README.md  batch_assess.yaml  demo_conditional.yaml  demo_failure.yaml  demo_foreach.yaml  demo_insession.yaml  demo_interrupt.yaml  demo_linear.yaml  demo_loop.yaml  demo_max_iter.yaml  demo_mixed.yaml  demo_parallel.yaml  demo_skip.yaml  demo_task.yaml  mxint_analysis.yaml  nas.yaml  parallel_research.yaml  render_chart.yaml  terminate.yaml  with_ask_user.yaml  with_dialog.yaml  with_retry.yaml  with_validator.yaml  with_wait.yaml
knowledge_base/: README.md  index.json
orca/: __init__.py
orca/chart/: _env.py  (+6 more)
scripts/: e2e_driver.py  gen_big_fixture.py  gen_events_ts.py  run_skill_benchmark.py
tests/: conftest.py  test_examples_script.py  test_exit_codes.py  test_skill_benchmark.py  test_skills_bundle.py
workflows/: agent-struct-exploration.yaml  kd-nas.yaml  nas-agent-pipeline.yaml  nas-hp-search.yaml  quant-bit-curve.yaml  quant-ptq-sweep.yaml  quant-qat.yaml  quant-sensitivity.yaml
(+928 files in other folders)
