[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orca"
version = "0.1.0"
description = "Orca — vendor-neutral、event-sourced、可视化的 coding-agent 编排控制平面"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "mozzielol" }]
# schema 仍零依赖（仅 pydantic）；compile/ 是运行时翻译层，读 YAML + 解析 jinja2 meta，
# 故 pyyaml / jinja2 进运行时依赖（非仅测试）。schema 本身不 import 它们，零依赖铁律不变。
# jsonschema：exec/ 的 result_extractor 用它做结构化输出校验（SPEC phase-4 §2.7），
# 进运行时依赖（ClaudeExecutor 跑时即用，非仅测试）。
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "jsonschema>=4.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    # mcp SDK：1.27+ 经 pyjwt[crypto] 依赖 cryptography。cryptography 49 在 darwin x86_64
    # 无预编译 wheel（需 rust/maturin 本地构建，CI 不友好），故锁 cryptography<49 走预编译
    # wheel，避免构建地狱。若未来 cryptography 49 提供更广平台 wheel，可放宽。
    "cryptography<49",
    "mcp>=1.0,<1.28",
    "textual>=8.2.8",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
    "websockets>=16.0",
]

[project.scripts]
# CLI 入口（phase 7 SPEC §5.2）：``orca run/validate/list``。
orca = "orca.iface.cli.commands:main"

[dependency-groups]
# 仅开发/测试期依赖（uv sync 自动安装）。
dev = [
    "playwright>=1.61.0",
    "pytest>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["orca"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    # integration：真 spawn claude 的烟雾测试。CI 默认不跑（-m "not integration"）；
    # 本地 ``pytest -m integration`` 可选跑（需 claude CLI + API key）。SPEC §7.10 / §12。
    "integration: 真 spawn claude 的集成测试（慢 / 需 API key，CI skip）",
]
filterwarnings = [
    # 第三方库弃用噪音（非本项目代码可修）：websockets 14+ 的 legacy 模块 + uvicorn 的
    # websockets_impl 导入路径触发 DeprecationWarning。仅 phase-7 真 server 测试命中。
    # 不影响 RuntimeWarning 检查（``-W "error::RuntimeWarning"`` 仍 0 命中）。
    "ignore:websockets.legacy is deprecated:DeprecationWarning",
    "ignore:websockets.server.WebSocketServerProtocol is deprecated:DeprecationWarning",
    "ignore:remove second argument of ws_handler:DeprecationWarning",
    # asyncio subprocess transport GC 时机小毛病（CPython 3.12 已知）：``stdio_client``
    # E2E 起的真 ``orca mcp`` 子进程 transport 在 ``asyncio.run`` 关 loop 后才被 GC，
    # ``__del__`` 调 ``call_soon`` raise ``Event loop is closed``。非 Orca bug / 非 mcp SDK bug，
    # 是 CPython 的 ``BaseSubprocessTransport.__del__`` 时机问题。不影响测试结果（test 仍 pass）。
    "ignore:Exception ignored in.*BaseSubprocessTransport:pytest.PytestUnraisableExceptionWarning",
]
